--- a/style.css
+++ b/style.css
@@ -30,13 +30,16 @@ header{
 
 .input-area{
     border: none;
+    border-radius: 24px;
     resize: none;
     box-sizing: content-box;
     overflow: hidden;
-    background: none;
+    background:#ffffff;
+    opacity: 0.5;
     position: absolute;
     left: 150px;
     top: 168px;
+    text-align: center;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
